Hide webhook url

--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,7 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+.webhook_url.rb
+
 # Ignore application configuration
 /config/application.yml
